--- a/Pages/login.html
+++ b/Pages/login.html
@@ -7,6 +7,9 @@
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"
         integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
         crossorigin="anonymous"></script>
+    <script>
+      var socket = io.connect("https://thesudoku.onrender.com")
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="public/script/notify.js"></script>
     <script src="public/script/cookies.js"></script>
