--- a/Pages/home.html
+++ b/Pages/home.html
@@ -9,7 +9,7 @@
             integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
             crossorigin="anonymous"></script>
     <script>
-        var socket = io.connect("https://sudoku-sand.vercel.app/")
+        var socket = io.connect("https://sudoku-sand.vercel.app")
     </script>
     <link rel="stylesheet" href="public/css/home.css">
     <script src="public/script/cookies.js"></script>
