--- a/Pages/login.html
+++ b/Pages/login.html
@@ -8,7 +8,7 @@
         integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
         crossorigin="anonymous"></script>
     <script>
-      var socket = io.connect("https://sudoku-sand.vercel.app/")
+      var socket = io.connect("https://sudoku-sand.vercel.app")
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="public/script/notify.js"></script>
